added delete and edit buttons to partial - added if statement that checks if show_edit_delete_buttons should be included in partial - added 'locals: { show_edit_delete_buttons: true }' to admin page and index page

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,4 +1,5 @@
 
+
 <div class="container">
   <h1 class="d-flex justify-content-center mb-1">QUIZDOG ADMIN</h1>
   <div class="w-20 d-flex justify-content-center">
@@ -16,33 +17,10 @@
   </ul>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-
       <%= link_to "Create a VENUE!", new_venue_path, class: "btn btn-success btn-create" %>
       <%# VENUE CARDS %>
       <div class="cards">
-        <% if @venues.empty? %>
-          <p>No venues yet.</p>
-        <% else %>
-          <% render @venues %>
-          <div class="admin-card-venue">
-            <div class="card-venue">
-              <%= cl_image_tag venue.photo.key %>
-              <div class="card-venue-title">
-                <h6><%= venue.name %></h6>
-              </div>
-              <div class="card-venue-info">
-                <p class="venue-day-time"><%= venue.day_of_the_week.upcase %> at <%= venue.time.strftime('%H:%M') %></p>
-                <p class="venue-address"><%= venue.address.partition(" London ").first%><%= venue.address.partition(" London ").last%></p>
-                <p class="venue-phone-number"><%= venue.phone_number %></p>
-              </div>
-            </div>
-            <div class="admin-cards-buttons">
-              <%= link_to "Edit", edit_venue_path(venue), class: "btn btn-primary"%>
-              <%= link_to "Delete", venue_path(venue), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
-            </div>
-          </div>
-          <% end %>
-        <% end %>
+        <%= render partial: 'venues/venue', collection: @venues, locals: { show_edit_delete_buttons: true } %>
       </div>
     </div>
 
