--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -34,7 +34,7 @@
       <% if @venues.empty? %>
         <p>No venues yet.</p>
       <% else %>
-        <%= render @venues %>
+        <%= render partial: 'venue', collection: @venues, locals: { show_edit_delete_buttons: false } %>
       <% end %>
     </div>
   </div>
