--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -1,11 +1,11 @@
 
 <div class="admin-card-venue">
-  <div class="card-venue" id=<%="#{venue.id}"%> data-select-card-target = "card" data-action="click->select-card#deselect">
+  <div class="venue-card" id=<%="#{venue.id}"%> data-select-card-target = "card" data-action="click->select-card#deselect">
     <%= cl_image_tag venue.photo.key if venue.photo %>
-    <div class="card-venue-title">
+    <div class="venue-card-title">
       <h6><%= venue.name %></h6>
     </div>
-    <div class="card-venue-info">
+    <div class="venue-card-info">
       <p class="venue-day-time"><%= venue.day_of_the_week.upcase %> at <%= venue.time.strftime('%H:%M') %></p>
       <p class="venue-address"> <%= venue.address.partition(" London ").first%><%= venue.address.partition(" London ").last%></p>
       <p class="venue-phone-number"><%= venue.phone_number %></p>
