--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,5 +4,5 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "buttons";
-@import "card";
+@import "venue_card";
 @import "quizmaster_card";
