added images for the carousel on the landing page to the asset pipeline in images/landing_page - modified html and css to reflect this

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,15 +6,39 @@
 }
 
 .bg-img-1 {
-  background-image: url('carousel-1.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background-image: url('landing_page/14.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 
 .bg-img-2 {
-  background-image: url('carousel-2.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background-image: url('landing_page/15.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 
 .bg-img-3 {
-  background-image: url('carousel-3.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background-image: url('landing_page/16.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+}
+
+.bg-img-4 {
+  background-image: url('landing_page/17.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+}
+
+.bg-img-5 {
+  background-image: url('landing_page/18.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+}
+
+.bg-img-6 {
+  background-image: url('landing_page/19.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+}
+
+.bg-img-7 {
+  background-image: url('landing_page/20.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+}
+
+.bg-img-8 {
+  background-image: url('landing_page/21.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+}
+
+.bg-img-9 {
+  background-image: url('landing_page/22.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
 }
 
 .carousel-image {
