--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,12 @@
       <div class="carousel-item carousel-image bg-img-1 active"></div>
       <div class="carousel-item carousel-image bg-img-2"></div>
       <div class="carousel-item carousel-image bg-img-3"></div>
+      <div class="carousel-item carousel-image bg-img-4"></div>
+      <div class="carousel-item carousel-image bg-img-5"></div>
+      <div class="carousel-item carousel-image bg-img-6"></div>
+      <div class="carousel-item carousel-image bg-img-7"></div>
+      <div class="carousel-item carousel-image bg-img-8"></div>
+      <div class="carousel-item carousel-image bg-img-9"></div>
     </div>
     <div class="row home-page-buttons justify-content-center mt-3">
       <div class="col-10 d-flex justify-content-center">
