added new images for the karaoke categories - updated html and css

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -102,25 +102,34 @@
 }
 
 .quizzing-category-img-1 {
-  background-image: url("landing_page/quizzing_sections/2.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  background-image: url("landing_page/quizzing_section/2.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 
 .quizzing-category-img-2 {
-  background-image: url("landing_page/quizzing_sections/3.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  background-image: url("landing_page/quizzing_section/3.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 
 .quizzing-category-img-3 {
-  background-image: url("landing_page/quizzing_sections/5.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  background-image: url("landing_page/quizzing_section/3.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 
 .quizzing-category-img-4 {
-  background-image: url("landing_page/quizzing_sections/6.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  background-image: url("landing_page/quizzing_section/5.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 
 .quizzing-category-img-5 {
-  background-image: url("landing_page/quizzing_sections/7.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  background-image: url("landing_page/quizzing_section/6.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 
+
+// KARAOKE IMAGES
+.karaoke-category-img-1 {
+  background-image: url("landing_page/karaoke_section/7.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+}
+
+.karaoke-category-img-2 {
+  background-image: url("landing_page/karaoke_section/8.jpg"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+}
 
 .category-image img {
   border-radius: 5px;
