--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -129,7 +129,7 @@
       <div class="carousel-item active" data-karaoke-carousel-target="card1">
         <div class="card category-card karaoke-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
           <%= link_to corporate_karaoke_path do %>
-          <div class="quizzing-category-img-1 category-image position-relative">
+          <div class="karaoke-category-img-1 category-image position-relative">
             <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
           </div>
           <div class="card-body">
@@ -142,7 +142,7 @@
       <div class="carousel-item" data-karaoke-carousel-target="card2">
         <div class="card category-card karaoke-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
           <%= link_to piano_karaoke_path do %>
-          <div class="quizzing-category-img-2 category-image position-relative">
+          <div class="karaoke-category-img-2 category-image position-relative">
             <h4 class="card-title font-weight-bold align-self-end">PIANO</h4>
           </div>
           <div class="card-body">
