--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,68 +37,58 @@
 </div>
 
 <%# QUIZZING SECTION %>
-<div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column align-items-center container-fluid">
+<div id="quizzing-section" class="mt-4 mb-4 container-fluid">
   <h1 class="mb-3">QUIZZING</h1>
 
 <%# CAROUSEL FOR QUIZZING CATEGORIES %>
   <div id="quizzing-categories-carousel" class="carousel" data-interval="false">
     <div class="carousel-inner" data-controller="multiple-images">
       <div class="carousel-item active" data-multiple-images-target="card1">
-        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+        <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
           <%= link_to venues_path do %>
-          <div class="quizzing-category-img-1 category-image position-relative">
-            <h4 class="card-title font-weight-bold align-self-end">PUBS</h4>
-          </div>
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <%= image_tag("landing_page/quizzing_section/2.jpg", class: "card-img", alt: "Card image") %>
+          <div class="card-img-overlay category-card-image">
+            <h4 class="card-title font-weight-bold">PUBS</h4>
           </div>
           <% end %>
         </div>
       </div>
       <div class="carousel-item" data-multiple-images-target="card2">
-        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to corporate_path do %>
-          <div class="quizzing-category-img-2 category-image position-relative">
-            <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
-          </div>
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
+        <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to venues_path do %>
+          <%= image_tag("landing_page/quizzing_section/3.jpg", class: "card-img", alt: "Card image") %>
+          <div class="card-img-overlay category-card-image">
+            <h4 class="card-title font-weight-bold">CORPORATE</h4>
           </div>
           <% end %>
         </div>
       </div>
       <div class="carousel-item" data-multiple-images-target="card3">
-        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to charity_path do %>
-          <div class="quizzing-category-img-3 category-image position-relative">
-            <h4 class="card-title font-weight-bold align-self-end">CHARITY</h4>
-          </div>
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to venues_path do %>
+          <%= image_tag("landing_page/quizzing_section/3.jpg", class: "card-img", alt: "Card image") %>
+          <div class="card-img-overlay category-card-image">
+            <h4 class="card-title font-weight-bold">CHARITY</h4>
           </div>
           <% end %>
         </div>
       </div>
       <div class="carousel-item" data-multiple-images-target="card4">
-        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to private_path do %>
-          <div class="quizzing-category-img-4 category-image position-relative">
-            <h4 class="card-title font-weight-bold align-self-end">PRIVATE</h4>
-          </div>
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to venues_path do %>
+          <%= image_tag("landing_page/quizzing_section/5.jpg", class: "card-img", alt: "Card image") %>
+          <div class="card-img-overlay category-card-image">
+            <h4 class="card-title font-weight-bold">PRIVATE</h4>
           </div>
           <% end %>
         </div>
       </div>
       <div class="carousel-item" data-multiple-images-target="card5">
-        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to virtual_path do %>
-          <div class="quizzing-category-img-5 category-image position-relative">
-            <h4 class="card-title font-weight-bold align-self-end">VIRTUAL</h4>
-          </div>
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card category-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to venues_path do %>
+          <%= image_tag("landing_page/quizzing_section/6.jpg", class: "card-img", alt: "Card image") %>
+          <div class="card-img-overlay category-card-image">
+            <h4 class="card-title font-weight-bold">VIRTUAL</h4>
           </div>
           <% end %>
         </div>
@@ -120,33 +110,29 @@
 <hr class="dividing-line-black">
 
 <%# KARAOKE SECTION %>
-<div id="karaoke-section" class="d-flex mt-5 mb-5 flex-column align-items-center container-fluid">
+<div id="karaoke-section" class="mt-4 mb-4 container-fluid">
   <h1 class="mb-3">KARAOKE</h1>
 
   <div id="karaoke-categories-carousel" class="carousel" data-interval="false">
     <div class="carousel-inner" data-controller="karaoke-carousel">
 
       <div class="carousel-item active" data-karaoke-carousel-target="card1">
-        <div class="card category-card karaoke-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+        <div class="card category-card karaoke-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
           <%= link_to corporate_karaoke_path do %>
-          <div class="karaoke-category-img-1 category-image position-relative">
-            <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
-          </div>
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <%= image_tag("landing_page/karaoke_section/7.jpg", class: "card-img", alt: "Card image") %>
+          <div class="card-img-overlay category-card-image">
+            <h4 class="card-title font-weight-bold">CORPORATE</h4>
           </div>
           <% end %>
         </div>
       </div>
 
       <div class="carousel-item" data-karaoke-carousel-target="card2">
-        <div class="card category-card karaoke-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to piano_karaoke_path do %>
-          <div class="karaoke-category-img-2 category-image position-relative">
-            <h4 class="card-title font-weight-bold align-self-end">PIANO</h4>
-          </div>
-          <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
+        <div class="card category-card karaoke-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to corporate_karaoke_path do %>
+          <%= image_tag("landing_page/karaoke_section/8.jpg", class: "card-img", alt: "Card image") %>
+          <div class="card-img-overlay category-card-image">
+            <h4 class="card-title font-weight-bold">LIVE PIANO</h4>
           </div>
           <% end %>
         </div>
@@ -165,7 +151,7 @@
 
 <%# WHO WE ARE SECTION %>
 <div id="who-we-are-section" class="d-flex flex-column align-items-center container-fluid">
-  <h1>WHO WE ARE</h1>
+  <h1>ABOUT QUIZ DOG</h1>
 
   <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column align-items-center">
     <h2 class="d-flex justify-content-center">JOE AND DOGS</h2>
