--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,9 @@
 @import "bootstrap";
 @import "font-awesome";
 
+//  Your Mixins
+@import "mixins/media";
+
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
