--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -72,7 +72,7 @@
 
 .dividing-line-black {
   border-bottom: 2px solid black !important;
-  width: 40%;
+  width: 70%;
   margin: 0 auto;
   border-radius: 5px;
 }
@@ -80,10 +80,10 @@
 // Category cards for QUIZZING and KARAOKE
 
 .category-card {
-  margin: 0 2rem;
+  margin: 0;
 
-  @media (max-width: 767px) {
-    margin: 0;
+  @include media(tabletAndUp) {
+    margin: 0 2rem;
   }
 }
 
@@ -113,6 +113,11 @@
   }
 }
 
+.about-card {
+  .card-title {
+    background-color: $peach;
+  }
+}
 // CAROUSEL --> DISPLAY THREE CARDS AT THE SAME TIME
 
 .carousel-inner .carousel-item.active,
