added contact_us section at the bottom of page - added images for social media and links - also added rule in application.scss text-decoration: none

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -193,6 +193,26 @@
 
 <hr class="dividing-line-black">
 
+<div id="contact-us-section" class="mt-4 mb-4 container-fluid d-flex flex-column align-items-center">
+  <h1>CONTACT US</h1>
+
+  <div class="social-media">
+    <%= link_to "https://www.instagram.com/quizdog/", target: "_blank" do %>
+      <%= image_tag("landing_page/social_media/1.jpg", class: "social-media-img", alt: "Instagram Logo") %>
+    <% end %>
+    <%= link_to "https://www.facebook.com/quizdog/", target: "_blank" do %>
+      <%= image_tag("landing_page/social_media/2.jpg", class: "social-media-img", alt: "Facebook Logo") %>
+    <% end %>
+    <%= link_to "https://www.linkedin.com/company/quiz-dog/", target: "_blank" do %>
+      <%= image_tag("landing_page/social_media/3.jpg", class: "social-media-img", alt: "Threads Logo") %>
+    <% end %>
+    <%= link_to "https://www.linkedin.com/company/quiz-dog/", target: "_blank" do %>
+      <%= image_tag("landing_page/social_media/4.jpg", class: "social-media-img", alt: "LinkedIn Logo") %>
+    <% end %>
+  </div>
+</div>
+
+<%#
 <div id="sustainability-section" class="d-flex flex-column align-items-center container-fluid">
   <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column align-items-center">
     <h1>SUSTAINABILITY</h1>
@@ -213,7 +233,9 @@
   </div>
 <div id="contact-section" class="d-flex flex-column container-lg align-center">
   <h1 class="d-flex justify-content-center">CONTACT QUIZDOG</h1>
-</div>
+</div> %>
+
+
 <%# TESTIMONIALS %>
 <%# <div class="row justify-content-evenly bg-success">
   <div class="col-3">
