--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -144,6 +144,10 @@
 }
 
 
+.social-media-img {
+  width: 2.5rem;
+  border-radius: 50%;
+}
 
 @media (max-width: 767px) {
   .carousel-inner .carousel-item > div {
