changed logo image on navbar

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -145,7 +145,7 @@
 
 
 .social-media-img {
-  width: 2.5rem;
+  width: 3rem;
   border-radius: 50%;
 }
 
@@ -179,7 +179,9 @@
   }
 }
 
-
+.contact-us-title {
+  margin-bottom: 0.2rem;
+}
 // WHO WE ARE SECTION
 
 .text-bubble-yellow {
