--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
     </div>
     <div class="row home-page-buttons justify-content-center mt-3">
       <div class="col-10 d-flex justify-content-center">
-        <%= image_tag("logo.png", class: "logo mb-3 mt-5 img-fluid", alt: "quizmaster logo") %>
+        <%= image_tag("logos/logo.png", class: "logo mb-3 mt-5 img-fluid", alt: "quizmaster logo") %>
       </div>
       <%= link_to venues_path do %>
         <div class="col-md-12 col-sm-12 d-flex justify-content-center btn-block">
@@ -193,8 +193,8 @@
 
 <hr class="dividing-line-black">
 
-<div id="contact-us-section" class="mt-4 mb-4 container-fluid d-flex flex-column align-items-center">
-  <h1>CONTACT US</h1>
+<div id="contact-us-section" class="mt-4 mb-5 container-fluid d-flex flex-column align-items-center">
+  <h1 class="contact-us-title">CONTACT US</h1>
 
   <div class="social-media">
     <%= link_to "https://www.instagram.com/quizdog/", target: "_blank" do %>
