--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -160,7 +160,7 @@
 
       <div class="carousel-item active" data-about-carousel-target="card1">
         <div class="card category-card about-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to corporate_karaoke_path do %>
+          <%= link_to about_us_path do %>
           <%= image_tag("landing_page/about_section/9.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">OUR STORY & HOSTS</h4>
@@ -171,7 +171,7 @@
 
       <div class="carousel-item" data-about-carousel-target="card2">
         <div class="card category-card about-card col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-          <%= link_to corporate_karaoke_path do %>
+          <%= link_to sustainability_path do %>
           <%= image_tag("landing_page/about_section/10.jpg", class: "card-img", alt: "Card image") %>
           <div class="card-img-overlay category-card-image">
             <h4 class="card-title font-weight-bold">SUSTAINABILITY</h4>
@@ -193,7 +193,7 @@
 
 <hr class="dividing-line-black">
 
-<div id="contact-us-section" class="mt-4 mb-5 container-fluid d-flex flex-column align-items-center">
+<div id="contact-us-section" class="mt-4 mb-4 container-fluid d-flex flex-column align-items-center">
   <h1 class="contact-us-title">CONTACT US</h1>
 
   <div class="social-media">
@@ -213,28 +213,6 @@
 </div>
 
 <%#
-<div id="sustainability-section" class="d-flex flex-column align-items-center container-fluid">
-  <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column align-items-center">
-    <h1>SUSTAINABILITY</h1>
-    <h4>Carbon Footprintp</h4>
-    <div class="text-bubble-green">
-      <p class="mb-0">
-        We take our environmental duties very seriously here at Quiz Dog. Between answer sheets and ink for picture rounds, the carbon footprint of a quiz can expand to those sasquatch prints in the snow.
-        We decided to make a difference and put everything online. No easy task given the access to Google, but with our anti-cheating measures, we are confident we have the greenest events company on the market. We are always looking for ways in which we can go even further with lessening our environmental impact and are striving for complete carbon neutrality.
-      </p>
-    </div>
-    <h4 class="mt-3">Planting trees, ecologi online</h4>
-    <div class="text-bubble-green">
-      <p class="mb-0">
-        One of the ways in which we are doing our bit for mother earth is by promising to plant a tree for every corporate client we have playing the quiz. This is done in partnership with the amazing people over at Ecologi (a B-Corps certificate company).
-        Click here to see how many trees we’ve planted!
-      </p>
-    </div>
-  </div>
-<div id="contact-section" class="d-flex flex-column container-lg align-center">
-  <h1 class="d-flex justify-content-center">CONTACT QUIZDOG</h1>
-</div> %>
-
 
 <%# TESTIMONIALS %>
 <%# <div class="row justify-content-evenly bg-success">
