added media query to section-title css class on home page so that titles are centered on larger screens

--- a/app/assets/stylesheets/mixins/_media.scss
+++ b/app/assets/stylesheets/mixins/_media.scss
@@ -3,4 +3,8 @@
   @if $query == tabletAndUp {
     @media (min-width: 48rem) { @content; }
   }
+
+  @if $query == laptopAndUp {
+    @media (min-width: 64rem) {@content;}
+  }
 }
