--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,7 +38,7 @@
 
 <%# QUIZZING SECTION %>
 <div id="quizzing-section" class="mt-4 mb-4 container-fluid">
-  <h1>QUIZZING</h1>
+  <h1 class="section-title">QUIZZING</h1>
 
 <%# CAROUSEL FOR QUIZZING CATEGORIES %>
   <div id="quizzing-categories-carousel" class="carousel" data-interval="false">
@@ -111,7 +111,7 @@
 
 <%# KARAOKE SECTION %>
 <div id="karaoke-section" class="mt-4 mb-4 container-fluid">
-  <h1>KARAOKE</h1>
+  <h1 class="section-title">KARAOKE</h1>
 
   <div id="karaoke-categories-carousel" class="carousel" data-interval="false">
     <div class="carousel-inner" data-controller="karaoke-carousel">
@@ -153,7 +153,7 @@
 
 <%# WHO WE ARE SECTION %>
 <div id="who-we-are-section" class="mt-4 mb-4 container-fluid">
-  <h1>ABOUT QUIZ DOG</h1>
+  <h1 class="section-title">ABOUT QUIZ DOG</h1>
 
   <div id="about-categories-carousel" class="carousel" data-interval="false">
     <div class="carousel-inner" data-controller="about-carousel">
