--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -22,5 +22,6 @@ $warning:    $orange;
 $border-radius:    2px;
 $border-radius-lg: 2px;
 $border-radius-sm: 2px;
+$br: 5px;
 
 // Override other variables below!
